Fix bbPress styling on the lead reply on mobile. Remove the admin bar on mobile.
Fixes #173.
Fixes #181.

--- a/css/less/media-queries.less
+++ b/css/less/media-queries.less
@@ -836,7 +836,8 @@
 	
 	#bbpress-forums li.bbp-body div.bbp-reply-content {
 		clear: none !important;
-		margin-left: 120px !important;
+		margin-left: 0 !important;
+		width: 100% !important;
 		padding: 12px 12px 12px 0 !important;
 		margin-bottom: 20px;
 	}
